--- a/style.css
+++ b/style.css
@@ -1,5 +1,41 @@
+@font-face {
+    font-family: "Monaspace Neon";
+    src: url("./MonaspaceNeon-Regular.woff2") format("woff2");
+    font-weight: 500;
+}
+
+@font-face {
+    font-family: "Monaspace Neon";
+    src: url("./MonaspaceNeon-Bold.woff2") format("woff2");
+    font-weight: 700;
+}
+
+@font-face {
+    font-family: "Monaspace Neon";
+    src: url("./MonaspaceNeon-SemiBold.woff2") format("woff2");
+    font-weight: 600;
+}
+@font-face {
+    font-family: "Monaspace Neon";
+    src: url("./MonaspaceNeon-SemiBoldItalic.woff") format("woff2");
+    font-weight: 600;
+    font-style: italic;
+}
+@font-face {
+    font-family: "Monaspace Neon";
+    src: url("./MonaspaceNeon-BoldItalic.woff2") format("woff2");
+    font-weight: 700;
+    font-style: italic;
+}
+@font-face {
+    font-family: "Monaspace Neon";
+    src: url("./MonaspaceNeon-Italic.woff2") format("woff2");
+    font-weight: 500;
+    font-style: italic;
+}
+
 * {
-    font-family: 'Monaspace Neon Var', 'Courier New', Courier, monospace;
+    font-family: 'Monaspace Neon', 'Courier New', Courier, monospace;
 }
 
 
@@ -57,7 +93,6 @@ a {
 }
 
 .blurb {
-
     font-size: 12pt;
     color: #8F8F8F;
     padding-bottom: 5px;
