--- a/style.css
+++ b/style.css
@@ -34,12 +34,8 @@
     font-style: italic;
 }
 
-* {
-    font-family: 'Monaspace Neon', 'Courier New', Courier, monospace;
-}
-
-
 body {
+    font-family: 'Monaspace Neon', 'Courier New', Courier, monospace;
     display: flex;
     justify-content: center;
     /* align-items: center; */
@@ -65,6 +61,10 @@ a {
 .sidebyside {
     display: flex;
     align-items: center;
+}
+
+.sidebysidetext {
+    display: flex;
 }
 
 .heading {
@@ -118,4 +118,6 @@ a {
     padding-right: 5px;
     color: #8F8F8F;
     stroke: #8F8F8F;
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: bold;
 }
